name:          hunt-searchengine
version:       0.3.1.0
license:       MIT
license-file:  LICENSE
author:        Chris Reumann, Ulf Sauer, Uwe Schmidt
copyright:     Chris Reumann, Ulf Sauer, Uwe Schmidt
maintainer:    Chris Reumann, Ulf Sauer, Uwe Schmidt
stability:     experimental
category:      Text, Data
synopsis:      A search and indexing engine.
homepage:      http://github.com/hunt-framework/
description:   The Hunt-Searchengine library provides a toolkit to
               create fast and flexible searchengines.
cabal-version: >=1.8
build-type:    Simple
extra-source-files: CHANGELOG

-- tested-with:   ghc-7.8.2

-- extra-source-files:
--     README

-- enable with cabal test -ftest-strict
flag test-strict
  default:      False
  manual:       True

source-repository head
  type:        git
  location:    https://github.com/hunt-framework/hunt.git

library

  build-depends: aeson                  >= 1.0.0.0
               , aeson-pretty           >= 0.7
               , base                   >= 4.8     && < 5
               , binary                 >= 0.5     && < 1
               , bytes
               , bytestring                           < 1
               , containers             >= 0.5
               , contravariant
               , data-default
               , data-r-tree            >= 0.0.5.0
               , data-stringmap         >= 1.0.1.1 && < 2
               , deepseq                >= 1.2
               , directory
               , dlist
               , filepath               >= 1
               , ghc-prim
               , hslogger               >= 1       && < 2
               , hxt-regex-xmlschema    >= 9.1
               , keys
               , monad-parallel         >= 0.7
               , mtl                    >= 1.1     && < 3
               , murmur-hash
               , parsec                 >= 2.1     && < 4
               , primitive
               , scientific
               , stm
               , text                   >= 1       && < 1.3
               , time                   >= 1.4     && < 2
               , transformers           >= 0.3
               , unordered-containers   >= 0.2
               , vector                 >= 0.10

  exposed-modules:
    Control.Concurrent.XMVar

    Data.Bijection
    Data.Bijection.Instances
    Data.IntMap.BinTree.Strict
    Data.IntSet.Cache
    Data.LimitedPriorityQueue
    Data.Primitive.PrimRef
    Data.Text.Binary
    Data.Typeable.Binary

    GHC.Fingerprint.Binary
    GHC.Stats.Json

    Hunt.ClientInterface

    Hunt.Common.ApiDocument
    Hunt.Common.BasicTypes
    Hunt.Common.DocDesc
    Hunt.Common.DocId
    Hunt.Common.DocIdMap
    Hunt.Common.DocIdSet
    Hunt.Common.Document
    Hunt.Common.Occurrences
    Hunt.Common.Positions

    Hunt.Index.Schema
    Hunt.Index.Schema.Analyze
    Hunt.Index.Schema.Normalize.Date
    Hunt.Index.Schema.Normalize.Position
    Hunt.Index.Schema.Normalize.Int

    Hunt.Index
    Hunt.Index.IndexImpl
    Hunt.Index.PrefixTreeIndex
    Hunt.Index.PrefixTreeIndex2Dim
    Hunt.Index.RTreeIndex
    Hunt.Index.InvertedIndex
    Hunt.Index.Proxy.KeyIndex

    Hunt.IO.Buffer
    Hunt.IO.Files
    Hunt.IO.Read
    Hunt.IO.Write

    Hunt.DocTable
    Hunt.DocTable.HashedDocTable

    Hunt.ContextIndex

    Hunt.Interpreter
    Hunt.Interpreter.BasicCommand
    Hunt.Interpreter.Command

    Hunt.Query.Fuzzy
    Hunt.Query.Intermediate
    Hunt.Query.Language.Grammar
    Hunt.Query.Language.Parser
    Hunt.Query.Language.Builder
    Hunt.Query.Processor
    Hunt.Query.Result

    Hunt.Scoring.Keys
    Hunt.Scoring.Score
    Hunt.Scoring.SearchResult

    Hunt.SegmentIndex
    Hunt.SegmentIndex.Descriptor
    Hunt.SegmentIndex.IndexWriter
    Hunt.SegmentIndex.Open
    Hunt.SegmentIndex.Store
    Hunt.SegmentIndex.Store.DirLayout
    Hunt.SegmentIndex.Store.Documents
    Hunt.SegmentIndex.Store.TermInfos
    Hunt.SegmentIndex.Types
    Hunt.SegmentIndex.Types.Generation
    Hunt.SegmentIndex.Types.Index
    Hunt.SegmentIndex.Types.SegmentId
    Hunt.SegmentIndex.Types.SegmentMap
    Hunt.SegmentIndex.Types.TermInfo

    Hunt.Utility
    Hunt.Utility.Log
    Hunt.Utility.Output

  hs-source-dirs: src

  ghc-options: -O2 -Wall -funbox-strict-fields -fwarn-tabs -threaded

  ghc-prof-options: -fprof-auto

  extensions: MultiParamTypeClasses
              FlexibleContexts
              OverloadedStrings
              TypeFamilies
              ConstraintKinds
              KindSignatures
              CPP

test-suite Hunt-Tests
  hs-source-dirs:       test
  main-is:              Hunt.hs
  other-modules:        Hunt.AnalyzerTests
                        Hunt.IndexTests
                        Hunt.InterpreterTests
                        Hunt.QueryParserTests
                        Hunt.TestHelper
                        Hunt.Index.ContextIndexTests
                        Hunt.Index.Default
                        Hunt.Index.Helper
                        Hunt.Index.IndexValueTests

  type:                 exitcode-stdio-1.0
  ghc-options:          -Wall
  extensions:           OverloadedStrings

  build-depends: HUnit
               , QuickCheck
               , aeson
               , base
               , binary
               , containers
               , data-default
               , data-r-tree
               , directory
               , hunt-searchengine
               , monad-parallel
               , mtl
               , old-locale
               , random
               , test-framework
               , test-framework-hunit
               , test-framework-quickcheck2
               , text
               , time

test-suite Hunt-Strictness
   hs-source-dirs:       test
   main-is:              Strictness.hs
   other-modules:        Hunt.Strict.ContextIndex
                         Hunt.Strict.DocTable
                         Hunt.Strict.Helper
                         Hunt.Strict.Index

   type:                 exitcode-stdio-1.0
   ghc-options:          -Wall
   extensions:           OverloadedStrings

   if !flag(test-strict)
     buildable: False
   else
     build-depends: base
                  , containers
                  , deepseq
                  , ghc-heap-view                >= 0.5
                  , HUnit
                  , hunt-searchengine
                  , mtl
                  , QuickCheck
                  , random                       >= 1.0
                  , test-framework
                  , test-framework-hunit
                  , test-framework-quickcheck2
                  , text
                  , aeson
                  , unordered-containers
                  , time
                  , old-locale
                  , monad-parallel
                  , data-default
