name:                hunt-servant-client
version:             0.1.0.0
synopsis:            Servant powered client for the hunt-servant-server
description:         Please see README.md
homepage:            https://github.com/hunt-framework/hunt
license:             MIT
license-file:        LICENSE
author:              Matthias Metzger, Alex Biehl
maintainer:          Matthias Metzger, Alex Biehl
copyright:           Matthias Metzger, Alex Biehl
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Hunt.Client
  build-depends:       base >= 4.7 && < 5
                     , http-client
                     , hunt-api
                     , hunt-searchengine
                     , mtl
                     , text
                     , servant
                     , servant-client
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/hunt-framework/hunt.git
