name:                hunt-servant
version:             0.1.0.0
synopsis:            A search and indexing engine server.
description:         Standalone search server based on the Hunt searchengine.
homepage:            http://github.com/hunt-framework
license:             MIT
license-file:        LICENSE
author:              Matthias Metzger, Alex Biehl
maintainer:          Matthias Metzger, Alex Biehl
copyright:           Matthias Metzger, Alex Biehl
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable hunt-servant-server
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       aeson
                     , base >= 4.7 && < 5
                     , blaze-html
                     , blaze-markup
                     , bytestring
                     , hslogger
                     , http-client
                     , hunt-searchengine
                     , mtl
                     , optparse-applicative
                     , servant
                     , servant-blaze
                     , servant-client
                     , servant-server
                     , shakespeare
                     , text
                     , wai
                     , wai-extra
                     , warp
  other-modules:       Hunt.API
                     , Hunt.Client
                     , Hunt.Server
                     , Hunt.Server.Configuration
                     , Hunt.Server.Template
  default-language:    Haskell2010

test-suite hunt-servant-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , http-client
                     , hunt-searchengine
                     , hunt-servant
                     , mtl
                     , optparse-applicative
                     , servant-client
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/hunt-framework/hunt.git
