name:          hunt-server-cli
version:       0.2.1.0
license:       MIT
license-file:  LICENSE
author:        Chris Reumann, Ulf Sauer, Sebastian Philipp
copyright:     Chris Reumann, Ulf Sauer, Sebastian Philipp
maintainer:    Chris Reumann, Ulf Sauer, Sebastian Philipp
stability:     experimental
category:      Console
synopsis:      A Command line Interface for the Hunt server.
homepage:      http://github.com/hunt-framework
description:   A Command line Interface for the Hunt server.
cabal-version: >=1.6
build-type:    Simple

-- extra-source-files:
--     README

source-repository head
  type:        git
  location:    https://github.com/hunt-framework/hunt.git

executable hunt-server-cli
  main-is:      Main.hs

  other-modules: Hunt.Converter.CSV

  build-depends:   aeson
                 , aeson-pretty
                 , base                   >= 4.8       && < 5
                 , binary
                 , bytestring             >= 0.9.1     && < 1
                 , cassava
                 , cassava-conduit
                 , conduit
                 , conduit-extra
                 , containers             >= 0.5
                 , data-default
                 , docopt                 >= 0.7
                 , hslogger
                 , http-types             >= 0.8.0
                 , hunt-client
                 , hunt-searchengine      >= 0.2
                 , mtl                    >= 1.1       && < 3
                 , resourcet >= 0.3
                 , string-conversions
                 , text                   >= 1         && < 2
                 , time
                 , transformers
                 , unordered-containers

  hs-source-dirs: src

  ghc-options:   -Wall

  if impl( ghc >= 7 )
    ghc-options: -rtsopts
                 -fwarn-tabs

  extensions: OverloadedStrings
