name:          hunt-server
version:       0.1
license:       MIT
license-file:  LICENSE
author:        Chris Reumann, Ulf Sauer, Sebastian Philipp
copyright:     Chris Reumann, Ulf Sauer, Sebastian Philipp
maintainer:    Chris Reumann, Ulf Sauer, Sebastian Philipp
stability:     experimental
category:      Text, Data
synopsis:      A search and indexing engine server.
homepage:      http://github.com/hunt-framework
description:   Standalone search server based on hunt searchengine
cabal-version: >=1.6
build-type:    Simple

extra-source-files:
    README

source-repository head
  type:        git
  location:    https://github.com/hunt-framework/hunt.git

executable hunt-server
  main-is:      Main.hs

  other-modules:

  build-depends:   base                   >= 4
                 , binary
                 , bytestring             >= 0.9.1     && < 1
                 , data-default
                 , aeson
                 , aeson-pretty
                 , blaze-html
                 , blaze-markup
                 , containers             >= 0.5
                 , deepseq                >= 1.2
                 , hamlet                 >= 1.1.7.1   && < 1.2
                 , hunt-searchengine      >= 0.1
                 , hslogger               >= 1         && < 2
                 , http-types             >= 0.8.0
                 , mtl                    >= 1.1       && < 3
                 , text                   >= 1         && < 2
                 , scotty                 >= 0.6       && < 1
                 , shakespeare-js         >= 1.1.4     && < 1.3
                 , wai                    >= 2.0       && < 2.1
                 , wai-extra              >= 2.0.1     && < 2.1
                 , wai-middleware-static  >= 0.4       && < 0.5
                 , warp                   >= 2.0.0.1   && < 2.1
                 , cmdargs                >= 0.10      && < 1

  hs-source-dirs: src

  ghc-options:   -threaded
                 -Wall
                 -funbox-strict-fields

  if impl( ghc >= 7 )
    ghc-options: -rtsopts
                 -fwarn-tabs

  extensions: MultiParamTypeClasses
              FlexibleContexts
              FlexibleInstances
              GeneralizedNewtypeDeriving
              TypeSynonymInstances
              OverloadedStrings
              TemplateHaskell
              QuasiQuotes
              RankNTypes
              TypeFamilies
              ConstraintKinds
              NoMonoLocalBinds
