name:                hunt-server
version:             0.1.0.0
synopsis:            A search and indexing engine server.
description:         Standalone search server based on the Hunt searchengine.
homepage:            http://github.com/hunt-framework
license:             MIT
license-file:        LICENSE
author:              Matthias Metzger, Alex Biehl
maintainer:          Matthias Metzger, Alex Biehl
copyright:           Matthias Metzger, Alex Biehl
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       aeson
                     , base >= 4.7 && < 5
                     , blaze-html
                     , blaze-markup
                     , bytestring
                     , directory
                     , hslogger
                     , hunt-api
                     , hunt-searchengine
                     , mtl
                     , optparse-applicative
                     , servant
                     , servant-blaze
                     , servant-server
                     , shakespeare
                     , text
                     , wai
                     , wai-extra
                     , warp
  exposed-modules:     Hunt.Server
                     , Hunt.Server.API
                     , Hunt.Server.Configuration
                     , Hunt.Server.Template
  default-language:    Haskell2010

test-suite hunt-server-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hunt-searchengine
                     , mtl
                     , optparse-applicative
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/hunt-framework/hunt.git
