name:          Holumbus-Searchengine
version:       2.0.0.0
license:       MIT
license-file:  LICENSE
author:        
copyright:     
maintainer:    
stability:     experimental
category:      Text, Data
synopsis:      A search and indexing engine.
homepage:      http://holumbus.fh-wedel.de
description:   The Holumbus-Searchengine library provides a document indexer
               and crawler to build indexes over document collections
               as well as a sophisticated query interface for these indexes.
cabal-version: >=1.8
build-type:    Simple
-- tested-with:   ghc-7.0.3

-- extra-source-files:
--     README

source-repository head
  type:        git
  location:    https://github.com/UlfS/holumbus.git

library
  build-depends: base                   >= 4   && < 5
               , aeson                  >= 0.6
               , binary                 >= 0.5 && < 1
               , bytestring             >= 0.9 && < 1
               , bzlib                  >= 0.4 && < 1
               , containers             >= 0.5
               , deepseq                >= 1.2
               , directory              >= 1   && < 2
               , filepath               >= 1   && < 2
               , hslogger               >= 1   && < 2
               , mtl                    >= 1.1 && < 3
               , murmur-hash
               , network                >= 2.1 && < 3
               , parallel               >= 3.1 && < 4
               , parsec                 >= 2.1 && < 4
               , process                >= 1   && < 2
               , SHA                    >= 1.4 && < 2
               , text                   >= 0.11
               , unix                   >= 2.3 && < 3

  exposed-modules:
    Data.Text.Binary
    Holumbus.Data.Crunch
    Holumbus.Data.PrefixTree.Core
    Holumbus.Data.PrefixTree.FuzzySearch
    Holumbus.Data.PrefixTree
    Holumbus.Data.PrefixTree.PrefixSet
    Holumbus.Data.PrefixTree.Types

    Holumbus.Common
    Holumbus.Common.BasicTypes
    Holumbus.Common.DiffList
    Holumbus.Common.DocId
    Holumbus.Common.DocIdMap
    Holumbus.Common.Document
    Holumbus.Common.CompressedDocument
    Holumbus.Common.Occurrences
    Holumbus.Common.RawResult
    Holumbus.Common.Compression
  
    Holumbus.Index.Common
    Holumbus.Index.Index
    Holumbus.Index.TextIndex
    Holumbus.Index.PrefixTreeIndex
    Holumbus.Index.ComprPrefixTreeIndex
    Holumbus.Index.InvertedIndex
    Holumbus.Index.Test

    Holumbus.Index.Proxy.ContextIndex
    Holumbus.Index.Proxy.CompressedIndex
    Holumbus.Index.Proxy.CachedIndex

    Holumbus.DocTable.Common
    Holumbus.DocTable.DocTable
    Holumbus.DocTable.HashedDocuments

    Holumbus.Interpreter.Interpreter
    Holumbus.Query.Fuzzy
    Holumbus.Query.Intermediate
    Holumbus.Query.Language.Grammar
    Holumbus.Query.Language.Parser
    Holumbus.Query.Processor
    Holumbus.Query.Ranking
    Holumbus.Query.Result
    Holumbus.Utility

  hs-source-dirs: src

  ghc-options: -Wall -funbox-strict-fields -fwarn-tabs

  extensions: MultiParamTypeClasses
              FlexibleContexts
              OverloadedStrings
              TypeFamilies
              ConstraintKinds
              KindSignatures
--              OverlappingInstances
--              FlexibleInstances
--              UndecidableInstances
--              GeneralizedNewtypeDeriving
--              TypeSynonymInstances

Test-suite Holumbus
  Hs-Source-Dirs:       test
  Main-Is:              Index.hs
  Type:                 exitcode-stdio-1.0
  Ghc-Options:          -Wall
  Extensions:           OverloadedStrings

  Build-Depends: base                       >= 4.6 && < 5
               , containers
               , HUnit
               , QuickCheck
               , test-framework
               , test-framework-hunit
               , test-framework-quickcheck2
               , Holumbus-Searchengine   
