name:          Holumbus-Searchengine
version:       2.0.0.0
license:       MIT
license-file:  LICENSE
author:
copyright:
maintainer:
stability:     experimental
category:      Text, Data
synopsis:      A search and indexing engine.
homepage:      http://holumbus.fh-wedel.de
description:   The Holumbus-Searchengine library provides a document indexer
               and crawler to build indexes over document collections
               as well as a sophisticated query interface for these indexes.
cabal-version: >=1.8
build-type:    Simple
-- tested-with:   ghc-7.0.3

-- extra-source-files:
--     README

source-repository head
  type:        git
  location:    https://github.com/UlfS/holumbus.git

library
  build-depends: base                   >= 4   && < 5
               , aeson                  >= 0.6
               , binary                 >= 0.5 && < 1
               , bytestring             >= 0.9 && < 1
               , bzlib                  >= 0.4 && < 1
               , containers             >= 0.5
               , data-stringmap         >= 0.9.2 && < 2
               , deepseq                >= 1.2
               , dlist
               , directory              >= 1   && < 2
               , filepath               >= 1   && < 2
               , hslogger               >= 1   && < 2
               , hxt-regex-xmlschema    >= 9.1
               , mtl                    >= 1.1 && < 3
               , murmur-hash
               , network                >= 2.1 && < 3
               , parallel               >= 3.1 && < 4
               , parsec                 >= 2.1 && < 4
               , process                >= 1   && < 2
               , SHA                    >= 1.4 && < 2
               , text                   >= 0.11 && < 1
               , time                   >= 1.4 && < 2
               , unix                   >= 2.3 && < 3
               , snappy                 >= 0.1 && < 1

  exposed-modules:
    Data.Text.Binary
    Data.Bijection
    Data.Bijection.Instances
    Holumbus.Data.Crunch

    Holumbus.Common
    Holumbus.Common.ApiDocument
    Holumbus.Common.BasicTypes
    Holumbus.Common.DiffList
    Holumbus.Common.DocId
    Holumbus.Common.DocIdMap
    Holumbus.Common.Document
    Holumbus.Common.Document.Compression.BZip
    Holumbus.Common.Document.Compression.Snappy
    Holumbus.Common.Occurrences
    Holumbus.Common.Occurrences.Compression
    Holumbus.Common.Occurrences.Compression.BZip
    Holumbus.Common.Occurrences.Compression.Simple9
    Holumbus.Common.Occurrences.Compression.Snappy
    Holumbus.Common.Positions
    Holumbus.Common.RawResult

    Holumbus.Index.Schema
    Holumbus.Index.Schema.Analyze
    Holumbus.Index.Schema.Normalize
    Holumbus.Index.Schema.Normalize.Date
    Holumbus.Index.Schema.Normalize.Position
    Holumbus.Index.Schema.Normalize.Int

    Holumbus.Index.Index
    Holumbus.Index.TextIndex
    Holumbus.Index.PrefixTreeIndex
    Holumbus.Index.ComprPrefixTreeIndex
    Holumbus.Index.InvertedIndex

    Holumbus.Index.Proxy.ContextIndex
    Holumbus.Index.Proxy.CompressedIndex
    Holumbus.Index.Proxy.CachedIndex
    Holumbus.Index.Proxy.DateNormalizerIndex
    Holumbus.Index.Proxy.IntNormalizerIndex
    Holumbus.Index.Proxy.KeyIndex
    Holumbus.Index.Proxy.PositionNormalizerIndex

    Holumbus.DocTable.DocTable
    Holumbus.DocTable.HashedDocTable

    Holumbus.Indexer.Indexer
    Holumbus.Indexer.TextIndexer

    Holumbus.Interpreter.Interpreter
    Holumbus.Interpreter.Command

    Holumbus.Query.Fuzzy
    Holumbus.Query.Intermediate
    Holumbus.Query.Language.Grammar
    Holumbus.Query.Language.Parser
    Holumbus.Query.Processor
    Holumbus.Query.Ranking
    Holumbus.Query.Result

    Holumbus.Utility
    Holumbus.Utility.Log
    Holumbus.Utility.XMVar

  hs-source-dirs: src

  ghc-options: -Wall -funbox-strict-fields -fwarn-tabs

  extensions: MultiParamTypeClasses
              FlexibleContexts
              OverloadedStrings
              TypeFamilies
              ConstraintKinds
              KindSignatures
--              OverlappingInstances
--              FlexibleInstances
--              UndecidableInstances
--              GeneralizedNewtypeDeriving
--              TypeSynonymInstances

test-suite Holumbus-Index
  hs-source-dirs:       test
  main-is:              Index.hs
  type:                 exitcode-stdio-1.0
  ghc-options:          -Wall
  extensions:           OverloadedStrings

  build-depends: base                         >= 4.6 && < 5
               , containers
               , HUnit
               , QuickCheck
               , test-framework
               , test-framework-hunit
               , test-framework-quickcheck2
               , Holumbus-Searchengine

Test-suite Holumbus-Interpreter
  hs-source-dirs:       test
  main-is:              Interpreter.hs
  type:                 exitcode-stdio-1.0
  ghc-options:          -Wall
  extensions:           OverloadedStrings

  build-depends: base                         >= 4.6 && < 5
               , containers
               , HUnit
               , mtl                          >= 1.1 && < 3
               , QuickCheck
               , test-framework
               , test-framework-hunit
               , test-framework-quickcheck2
               , Holumbus-Searchengine

Test-suite Holumbus-Query-Parser
  hs-source-dirs:       test
  main-is:              QueryParser.hs
  type:                 exitcode-stdio-1.0
  ghc-options:          -Wall
  extensions:           OverloadedStrings

  build-depends: base                         >= 4.6 && < 5
               , containers
               , HUnit
               , mtl                          >= 1.1 && < 3
               , QuickCheck
               , test-framework
               , test-framework-hunit
               , test-framework-quickcheck2
               , Holumbus-Searchengine
               , text


Test-suite Holumbus-IndexStrictess
  hs-source-dirs:       test
  main-is:              IndexStrict.hs
  type:                 exitcode-stdio-1.0
  ghc-options:          -Wall
  extensions:           OverloadedStrings

  build-depends: base                         >= 4.6 && < 5
               , containers
               , HUnit
               , mtl                          >= 1.1 && < 3
               , QuickCheck
               , test-framework
               , test-framework-hunit
               , test-framework-quickcheck2
               , Holumbus-Searchengine
               , text
               , ghc-heap-view                >= 0.5
               , deepseq                      >= 1.2
               , random                       >= 1.0


Test-suite Holumbus-Analyzer
  hs-source-dirs:       test
  main-is:              Analyzer.hs
  type:                 exitcode-stdio-1.0
  ghc-options:          -Wall
  extensions:           OverloadedStrings

  build-depends: base                         >= 4.6 && < 5
               , containers
               , HUnit
               , mtl                          >= 1.1 && < 3
               , QuickCheck
               , test-framework
               , test-framework-hunit
               , test-framework-quickcheck2
               , Holumbus-Searchengine
               , text
               , ghc-heap-view                >= 0.5
               , deepseq                      >= 1.2
               , random                       >= 1.0
               , old-locale
               , time
