name:          Hunt-Searchengine
version:       2.0.0.0
license:       MIT
license-file:  LICENSE
author:
copyright:
maintainer:
stability:     experimental
category:      Text, Data
synopsis:      A search and indexing engine.
homepage:      http://holumbus.fh-wedel.de
description:   The Hunt-Searchengine library provides a document indexer
               and crawler to build indexes over document collections
               as well as a sophisticated query interface for these indexes.
cabal-version: >=1.8
build-type:    Simple
-- tested-with:   ghc-7.0.3

-- extra-source-files:
--     README

source-repository head
  type:        git
  location:    https://github.com/UlfS/holumbus.git

library

  build-depends: base                   >= 4.5  && < 5
               , aeson                  >= 0.6
               , binary                 >= 0.5  && < 1
               , bytestring             >= 0.10.4  && < 1
               , bzlib                  >= 0.4  && < 1
               , containers             >= 0.5
               , data-stringmap         >= 0.9.5
               , deepseq                >= 1.2
               , dlist
               , directory              >= 1    && < 2
               , filepath               >= 1    && < 2
               , hslogger               >= 1    && < 2
               , hxt-regex-xmlschema    >= 9.1
               , mtl                    >= 1.1  && < 3
               , murmur-hash
               , network                >= 2.1  && < 3
               , parallel               >= 3.1  && < 4
               , parsec                 >= 2.1  && < 4
               , process                >= 1    && < 2
               , SHA                    >= 1.4  && < 2
               , text                   >= 0.11
               , time                   >= 1.4  && < 2
               , unix                   >= 2.3  && < 3
  if impl( ghc >= 7.7 )
    build-depends: snappy               >= 0.1  && < 1

  exposed-modules:
    Control.Concurrent.XMVar

    Data.Bijection
    Data.Bijection.Instances
    Data.Text.Binary
    Data.Typeable.Binary

    GHC.Fingerprint.Binary
    GHC.Stats.Json

    Hunt.Data.Crunch

    Hunt.Common
    Hunt.Common.ApiDocument
    Hunt.Common.BasicTypes
    Hunt.Common.DiffList
    Hunt.Common.DocId
    Hunt.Common.DocIdMap
    Hunt.Common.Document
    Hunt.Common.Document.Compression.BZip
    Hunt.Common.Document.Compression.Snappy

    Hunt.Common.Occurrences
    Hunt.Common.Occurrences.Compression
    Hunt.Common.Occurrences.Compression.BZip
    Hunt.Common.Occurrences.Compression.Simple9
    Hunt.Common.Occurrences.Compression.Snappy
    Hunt.Common.Positions
    Hunt.Common.RawResult

    Hunt.Index.Schema
    Hunt.Index.Schema.Analyze
    Hunt.Index.Schema.Normalize
    Hunt.Index.Schema.Normalize.Date
    Hunt.Index.Schema.Normalize.Position
    Hunt.Index.Schema.Normalize.Int

    Hunt.Index.Index
    Hunt.Index.IndexImpl
    Hunt.Index.PrefixTreeIndex
    Hunt.Index.ComprPrefixTreeIndex
    Hunt.Index.InvertedIndex

    Hunt.Index.Proxy.ContextIndex
    Hunt.Index.Proxy.CompressedIndex
    Hunt.Index.Proxy.CachedIndex
    Hunt.Index.Proxy.DateNormalizerIndex
    Hunt.Index.Proxy.IntNormalizerIndex
    Hunt.Index.Proxy.KeyIndex
    Hunt.Index.Proxy.PositionNormalizerIndex

    Hunt.DocTable.DocTable
    Hunt.DocTable.HashedDocTable

    Hunt.IndexHandler

    Hunt.Interpreter.Interpreter
    Hunt.Interpreter.BasicCommand
    Hunt.Interpreter.Command

    Hunt.Query.Fuzzy
    Hunt.Query.Intermediate
    Hunt.Query.Language.Grammar
    Hunt.Query.Language.Parser
    Hunt.Query.Processor
    Hunt.Query.Ranking
    Hunt.Query.Result

    Hunt.Utility
    Hunt.Utility.Log

  hs-source-dirs: src

  ghc-options: -Wall -funbox-strict-fields -fwarn-tabs

  extensions: MultiParamTypeClasses
              FlexibleContexts
              OverloadedStrings
              TypeFamilies
              ConstraintKinds
              KindSignatures
              CPP
--              OverlappingInstances
--              FlexibleInstances
--              UndecidableInstances
--              GeneralizedNewtypeDeriving
--              TypeSynonymInstances

test-suite Hunt-Index
  hs-source-dirs:       test
  main-is:              Index.hs
  type:                 exitcode-stdio-1.0
  ghc-options:          -Wall
  extensions:           OverloadedStrings

  build-depends: base                         >= 4.6 && < 5
               , containers
               , HUnit
               , Hunt-Searchengine
               , QuickCheck
               , test-framework
               , test-framework-hunit
               , test-framework-quickcheck2

test-suite Hunt-Interpreter
  hs-source-dirs:       test
  main-is:              Interpreter.hs
  type:                 exitcode-stdio-1.0
  ghc-options:          -Wall
  extensions:           OverloadedStrings

  build-depends: base                         >= 4.6 && < 5
               , containers
               , HUnit
               , Hunt-Searchengine
               , mtl                          >= 1.1 && < 3
               , QuickCheck
               , test-framework
               , test-framework-hunit
               , test-framework-quickcheck2
               , text

test-suite Hunt-Query-Parser
  hs-source-dirs:       test
  main-is:              QueryParser.hs
  type:                 exitcode-stdio-1.0
  ghc-options:          -Wall
  extensions:           OverloadedStrings

  build-depends: base                         >= 4.6 && < 5
               , containers
               , HUnit
               , Hunt-Searchengine
               , mtl                          >= 1.1 && < 3
               , QuickCheck
               , test-framework
               , test-framework-hunit
               , test-framework-quickcheck2
               , text

--test-suite Hunt-IndexStrictess
--  hs-source-dirs:       test
--  main-is:              IndexStrict.hs
--  type:                 exitcode-stdio-1.0
--  ghc-options:          -Wall
--  extensions:           OverloadedStrings
--
--  build-depends: base                         >= 4.6 && < 5
--               , containers
--               , deepseq                      >= 1.2
--               , ghc-heap-view                >= 0.5
--               , HUnit
--               , Hunt-Searchengine
--               , mtl                          >= 1.1 && < 3
--               , QuickCheck
--               , random                       >= 1.0
--               , test-framework
--               , test-framework-hunit
--               , test-framework-quickcheck2
--               , text

test-suite Hunt-Analyzer
  hs-source-dirs:       test
  main-is:              Analyzer.hs
  type:                 exitcode-stdio-1.0
  ghc-options:          -Wall
  extensions:           OverloadedStrings

  build-depends: base                         >= 4.6 && < 5
               , containers
               , Hunt-Searchengine
               , HUnit
               , mtl                          >= 1.1 && < 3
               , old-locale
               , QuickCheck
               , random                       >= 1.0
               , test-framework
               , test-framework-hunit
               , test-framework-quickcheck2
               , text
               , time
