name:          Holumbus-Server
version:       2
license:       MIT
license-file:  LICENSE
author:
copyright:
maintainer:
stability:     experimental
category:      Text, Data
synopsis:      A search and indexing engine.
homepage:      http://holumbus.fh-wedel.de
description:   Standalone Search Server based on holumbus searchengine
cabal-version: >=1.6
build-type:    Simple

extra-source-files:
    README

source-repository head
  type:        git
  location:    https://github.com/UlfS/holumbus.git

library
  hs-source-dirs:   src-client
  exposed-modules:
                Holumbus.Server.Client
  build-depends:
                base >= 4
                , bytestring             >= 0.9.1
                , text >= 0.11 && < 1
                , http-conduit >= 2.0.0
                , transformers >= 0.3
                , lens >= 3.10
                , conduit >= 1.0
                , failure >= 0.2
                , http-client >= 0.2 

executable holumbusServer
  main-is:      Server.hs

  other-modules:

  build-depends:   base                   >= 4
                 , binary
                 , bytestring             >= 0.9.1     && < 1
                 , aeson
                 , aeson-pretty
                 , blaze-html
                 , blaze-markup
                 , containers             >= 0.5
                 , deepseq                >= 1.2
                 , hamlet                 >= 1.1.7.1   && < 1.2
                 , Holumbus-Searchengine  >= 2
                 , hslogger               >= 1         && < 2
                 , http-types             >= 0.8.0
                 , mtl                    >= 1.1       && < 3
                 , text                   >= 0.11      && < 1
                 , scotty                 >= 0.5       && < 0.6
                 , shakespeare-js         >= 1.1.4     && < 1.3
                 , wai                    >= 1.3.0.1   && < 2
                 , wai-extra              >= 1.3.0.3   && < 2
                 , wai-middleware-static  >= 0.3.2
                 , warp                   >= 1.3.4.1   && < 2

  hs-source-dirs: src

  ghc-options:   -threaded
                 -Wall
                 -funbox-strict-fields

  if impl( ghc >= 7 )
    ghc-options: -rtsopts
                 -fwarn-tabs

  extensions: MultiParamTypeClasses
              FlexibleContexts
              FlexibleInstances
              GeneralizedNewtypeDeriving
              TypeSynonymInstances
              OverloadedStrings
              TemplateHaskell
              QuasiQuotes
              RankNTypes
              TypeFamilies
              ConstraintKinds
              NoMonoLocalBinds
